--- a/Tennis.ipynb
+++ b/Tennis.ipynb
@@ -169,7 +169,7 @@
     "    states = env_info.vector_observations\n",
     "    episode_return = np.zeros(num_agents)\n",
     "    for t in range(max_t):\n",
-    "        actions = agent.act(states)\n",
+    "        actions = agent.act2(states)\n",
     "        actions = np.array(actions)\n",
     "        env_info = env.step(actions)[brain_name]\n",
     "        next_states = env_info.vector_observations\n",
@@ -188,7 +188,7 @@
     "   \n",
     "    np.random.seed(10)\n",
     "\n",
-    "    agent = MaddpgAgent(num_agents, state_size, action_size, 10)\n",
+    "    agent = MaddpgAgent(2, state_size, action_size, 10)\n",
     "\n",
     "    print(\"Agent count: \", num_agents)\n",
     "\n",
@@ -230,29 +230,79 @@
      "name": "stdout",
      "text": [
       "Agent count:  2\n",
-      "Episode 100\tAverage Score: -0.0045   Exploration: 1.00\n",
-      "Episode 200\tAverage Score: -0.0050   Exploration: 0.99\n",
-      "Episode 300\tAverage Score: -0.0050   Exploration: 0.99\n",
-      "Episode 400\tAverage Score: -0.0050   Exploration: 0.99\n",
-      "Episode 500\tAverage Score: -0.0050   Exploration: 0.99\n",
-      "Episode 600\tAverage Score: -0.0050   Exploration: 0.98\n",
-      "Episode 700\tAverage Score: -0.0050   Exploration: 0.98\n",
-      "Episode 800\tAverage Score: -0.0050   Exploration: 0.98\n",
-      "Episode 900\tAverage Score: -0.0050   Exploration: 0.97\n",
-      "Episode 1000\tAverage Score: -0.0050   Exploration: 0.97\n",
-      "Episode 1100\tAverage Score: -0.0050   Exploration: 0.97\n",
-      "Episode 1200\tAverage Score: -0.0050   Exploration: 0.97\n",
-      "Episode 1300\tAverage Score: -0.0050   Exploration: 0.96\n",
-      "Episode 1400\tAverage Score: -0.0050   Exploration: 0.96\n",
-      "Episode 1500\tAverage Score: -0.0050   Exploration: 0.96\n",
-      "Episode 1600\tAverage Score: -0.0050   Exploration: 0.96\n",
-      "Episode 1700\tAverage Score: -0.0050   Exploration: 0.95\n",
-      "Episode 1800\tAverage Score: -0.0050   Exploration: 0.95\n",
-      "Episode 1900\tAverage Score: -0.0050   Exploration: 0.95\n",
-      "Episode 2000\tAverage Score: -0.0050   Exploration: 0.94\n",
-      "Episode 2100\tAverage Score: -0.0050   Exploration: 0.94\n",
-      "Episode 2200\tAverage Score: -0.0050   Exploration: 0.94\n",
-      "Episode 2300\tAverage Score: -0.0050   Exploration: 0.94\n"
+      "Episode 100\tAverage Score: -0.0050   Exploration: 1.00\n",
+      "Episode 200\tAverage Score: -0.0050   Exploration: 1.00\n",
+      "Episode 300\tAverage Score: -0.0035   Exploration: 1.00\n",
+      "Episode 400\tAverage Score: 0.0015   Exploration: 0.99\n",
+      "Episode 500\tAverage Score: -0.0040   Exploration: 0.99\n",
+      "Episode 600\tAverage Score: -0.0050   Exploration: 0.99\n",
+      "Episode 700\tAverage Score: -0.0035   Exploration: 0.99\n",
+      "Episode 800\tAverage Score: -0.0050   Exploration: 0.99\n",
+      "Episode 900\tAverage Score: -0.0050   Exploration: 0.99\n",
+      "Episode 1000\tAverage Score: -0.0035   Exploration: 0.99\n",
+      "Episode 1100\tAverage Score: -0.0045   Exploration: 0.98\n",
+      "Episode 1200\tAverage Score: -0.0050   Exploration: 0.98\n",
+      "Episode 1300\tAverage Score: -0.0050   Exploration: 0.98\n",
+      "Episode 1400\tAverage Score: -0.0045   Exploration: 0.98\n",
+      "Episode 1500\tAverage Score: -0.0045   Exploration: 0.98\n",
+      "Episode 1600\tAverage Score: -0.0050   Exploration: 0.98\n",
+      "Episode 1700\tAverage Score: -0.0005   Exploration: 0.98\n",
+      "Episode 1800\tAverage Score: -0.0040   Exploration: 0.97\n",
+      "Episode 1900\tAverage Score: -0.0050   Exploration: 0.97\n",
+      "Episode 2000\tAverage Score: -0.0045   Exploration: 0.97\n",
+      "Episode 2100\tAverage Score: -0.0045   Exploration: 0.97\n",
+      "Episode 2200\tAverage Score: -0.0035   Exploration: 0.97\n",
+      "Episode 2300\tAverage Score: -0.0050   Exploration: 0.97\n",
+      "Episode 2400\tAverage Score: -0.0050   Exploration: 0.97\n",
+      "Episode 2500\tAverage Score: -0.0050   Exploration: 0.96\n",
+      "Episode 2600\tAverage Score: -0.0050   Exploration: 0.96\n",
+      "Episode 2700\tAverage Score: -0.0045   Exploration: 0.96\n",
+      "Episode 2800\tAverage Score: -0.0050   Exploration: 0.96\n",
+      "Episode 2900\tAverage Score: -0.0050   Exploration: 0.96\n",
+      "Episode 3000\tAverage Score: -0.0040   Exploration: 0.96\n",
+      "Episode 3100\tAverage Score: -0.0050   Exploration: 0.96\n",
+      "Episode 3200\tAverage Score: -0.0045   Exploration: 0.95\n",
+      "Episode 3300\tAverage Score: -0.0050   Exploration: 0.95\n",
+      "Episode 3400\tAverage Score: -0.0040   Exploration: 0.95\n",
+      "Episode 3500\tAverage Score: -0.0020   Exploration: 0.95\n",
+      "Episode 3600\tAverage Score: -0.0025   Exploration: 0.95\n",
+      "Episode 3700\tAverage Score: -0.0025   Exploration: 0.95\n",
+      "Episode 3800\tAverage Score: -0.0020   Exploration: 0.95\n",
+      "Episode 3900\tAverage Score: -0.0030   Exploration: 0.94\n",
+      "Episode 4000\tAverage Score: 0.0140   Exploration: 0.94\n",
+      "Episode 4100\tAverage Score: -0.0030   Exploration: 0.94\n",
+      "Episode 4200\tAverage Score: -0.0040   Exploration: 0.94\n",
+      "Episode 4300\tAverage Score: -0.0040   Exploration: 0.94\n",
+      "Episode 4400\tAverage Score: -0.0020   Exploration: 0.94\n",
+      "Episode 4500\tAverage Score: -0.0045   Exploration: 0.94\n",
+      "Episode 4600\tAverage Score: -0.0050   Exploration: 0.93\n",
+      "Episode 4700\tAverage Score: -0.0050   Exploration: 0.93\n",
+      "Episode 4800\tAverage Score: -0.0050   Exploration: 0.93\n",
+      "Episode 4900\tAverage Score: -0.0050   Exploration: 0.93\n",
+      "Episode 5000\tAverage Score: -0.0050   Exploration: 0.93\n",
+      "Episode 5100\tAverage Score: -0.0050   Exploration: 0.93\n",
+      "Episode 5200\tAverage Score: -0.0050   Exploration: 0.93\n",
+      "Episode 5300\tAverage Score: -0.0050   Exploration: 0.92\n",
+      "Episode 5400\tAverage Score: -0.0050   Exploration: 0.92\n",
+      "Episode 5500\tAverage Score: -0.0050   Exploration: 0.92\n",
+      "Episode 5600\tAverage Score: -0.0050   Exploration: 0.92\n",
+      "Episode 5700\tAverage Score: -0.0050   Exploration: 0.92\n",
+      "Episode 5800\tAverage Score: -0.0050   Exploration: 0.92\n",
+      "Episode 5900\tAverage Score: -0.0050   Exploration: 0.92\n",
+      "Episode 6000\tAverage Score: -0.0050   Exploration: 0.92\n",
+      "Episode 6100\tAverage Score: -0.0050   Exploration: 0.91\n",
+      "Episode 6200\tAverage Score: -0.0050   Exploration: 0.91\n",
+      "Episode 6300\tAverage Score: -0.0050   Exploration: 0.91\n",
+      "Episode 6400\tAverage Score: -0.0050   Exploration: 0.91\n",
+      "Episode 6500\tAverage Score: -0.0050   Exploration: 0.91\n",
+      "Episode 6600\tAverage Score: -0.0050   Exploration: 0.91\n",
+      "Episode 6700\tAverage Score: -0.0050   Exploration: 0.91\n",
+      "Episode 6800\tAverage Score: -0.0050   Exploration: 0.91\n",
+      "Episode 6900\tAverage Score: -0.0050   Exploration: 0.90\n",
+      "Episode 7000\tAverage Score: -0.0050   Exploration: 0.90\n",
+      "Episode 7100\tAverage Score: -0.0050   Exploration: 0.90\n",
+      "Episode 7200\tAverage Score: -0.0050   Exploration: 0.90\n",
+      "Episode 7300\tAverage Score: -0.0050   Exploration: 0.90\n"
      ]
     }
    ],
