Clean up Tennis notebook

--- a/Tennis.ipynb
+++ b/Tennis.ipynb
@@ -129,13 +129,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Take Random Actions in the Environment\n",
+    "### 3. Use MADDPG to solve the Environment\n",
     "\n",
     "In the next code cell, you will learn how to use the Python API to control the agents and receive feedback from the environment.\n",
+    "The MADDPG will be trained to solve the environment.\n",
     "\n",
-    "Once this cell is executed, you will watch the agents' performance, if they select actions at random with each time step.  A window should pop up that allows you to observe the agents.\n",
-    "\n",
-    "Of course, as part of the project, you'll have to change the code so that the agents are able to use their experiences to gradually choose better actions when interacting with the environment!"
+    "Once this cell is executed, you will watch the agents' performance, if they select actions at random with each time step.  A window should pop up that allows you to observe the agents.\n"
    ]
   },
   {
@@ -219,10 +218,20 @@
    ]
   },
   {
+   "source": [
+    "### 4. Train the agent and display the learning graph\n",
+    "Process the following cell to train the MADDPG agent"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "tags": []
+    "tags": [
+     "outputPrepend"
+    ]
    },
    "outputs": [
     {
@@ -360,8 +369,16 @@
    ]
   },
   {
+   "source": [
+    "### 5. Watch the agent\n",
+    "Running the next cell will create the agent and it will load the weights. Then you will be able to watch the train agents playing Tennis."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -369,10 +386,7 @@
      "name": "stdout",
      "text": [
       "Score (max over agents) from episode 1: 2.600000038743019\n",
-      "Score (max over agents) from episode 2: 0.0\n",
-      "Score (max over agents) from episode 3: 0.4000000059604645\n",
-      "Score (max over agents) from episode 4: 2.0000000298023224\n",
-      "Score (max over agents) from episode 5: 0.30000000447034836\n"
+      "Score (max over agents) from episode 2: 1.9000000283122063\n"
      ]
     }
    ],
